Fix failing ScanExecutorPT (#163)
* replaced outdated hinting

Co-authored-by: Keith Turner <kturner@apache.org>
Co-authored-by: Jeffrey Manno <jeffreymanno15@gmail.com>